Fixed spacing issues in the gunsafe section

--- a/styles/gunsStyle.css
+++ b/styles/gunsStyle.css
@@ -77,11 +77,10 @@
 
 .gunSafeCon{
     height: 19.9rem;
-    padding-right: 10rem;
+    /* padding-right: 10rem; */
 
 }
 
-.gunSafeImgCon{
-  
-
+.card-group{
+    gap: 1.5rem;
 }
